# sherryAgent

./: .coverage  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  conftest.py  fusion-design.md  pyproject.toml  research-report.md  run_gaia_simple_tasks.py  test_actual_task.py  test_db_init.py  test_framework_flow.py  test_fully_automated.py  test_hard_tasks.py  test_medium_tasks.py  test_ollama_fix.py  test_ollama_tools.py  test_output.txt  test_qwen3_connection.py  test_qwen3_tools.py  test_simple_tasks.py  test_small_model_optimization.py
.agent/: config.toml.example
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: conflict-decision.yml  contract-change.yml  work-unit.yml
.github/workflows/: pr-governance-gates.yml
docs/: INDEX.md
docs/architecture/: core-operational-loops.md  module-map.md  quality-vs-latency-vs-cost.md  runtime-modes.md  scaling-strategy.md  system-blueprint.md
docs/guides/: git-workflow.md  github-governance-controls.md  multi-conversation-development.md  openspec-guide.md  plugin-best-practices.md  plugin-development.md  requirement-review.md  sdd-workflow.md  spec-authority.md  technical-research.md  testing-guide.md  testing-strategy.md
docs/legacy/: implementation-snapshot.md  source-map.md
docs/plans/: 2026-04-07-sherryagent-evolution-plan.md  development-readiness-gate-decision.md  gate-readiness-evidence.md  implementation-program.md  master-program.md  mvp-3-plan.md  mvp-5-plan.md  phoenix-roadmap.md  story-gate-matrix.md  version-control-migration.md
docs/reference/: business-metrics.md  glossary.md  project-structure.md  tech-stack.md  technical-metrics.md  version-constraints.md
docs/research/: agent-evaluation-retrospective.md  claude-code-analysis.md  claude-code-feature-gap.md  cli-comparison.md  cli-completeness-evaluation.md  cli-ux-testing.md  community-feedback.md  comparison.md  dataset-survey.md  deep-retrospective.md  implementation-gap-analysis.md  mvp-1-retrospective.md  openclaw-analysis.md  openclaw-feature-gap.md  research-depth-analysis.md
docs/roles/: architect.md  implementer.md  product-owner.md  program-conductor.md  release-governor.md  researcher.md  reviewer.md  spec-owner.md
docs/specs/: 2026-04-07-sherryagent-evolution-design.md  agent-loop.md  core-data-contracts.md  cost-ops-governance.md  data-flow.md  evaluation-governance.md  heartbeat-engine.md  memory-system.md  multi-agent-orchestration.md  observability-system.md  permission-system.md  runtime-modes.md  six-layer-architecture.md  task-persistence.md  tool-governance.md
docs/standard/: coding-standards.md  design-principles.md  naming-conventions.md  program-conductor-state.md  research-template.md  retrospective-template.md  role-handoff-contract.md  story-rollout-record.md  story-template.md
docs/vision/: north-star.md  (+1 more)
examples/: multi_agent_demo.py
tests/: __init__.py  conftest.py  test_cli_modes.py  test_governance_checks.py  test_memory_tooling_cost_release_slice.py  test_metrics_harness.py  test_models_contract.py  test_platform_contract_docs.py  test_runtime_contracts.py  test_runtime_modes.py  test_story01_acceptance.py  test_story05_acceptance.py  test_story_contract_docs.py
(+302 files in other folders)
