[project]
name = "sherry-agent"
version = "0.1.0"
description = "基于 Claude Code 与 OpenClaw 两大 AI Agent 框架优势融合的 Python 多 Agent 框架"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "SherryAgent Team" }
]
keywords = ["ai", "agent", "llm", "claude", "openai"]

# docs-only（Egg）阶段占位：
# - 不保留可运行实现代码
# - 不提供 scripts/依赖/测试工具链配置
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
