[project]
name = "sherry-agent"
version = "0.1.0"
description = "基于 Claude Code 与 OpenClaw 两大 AI Agent 框架优势融合的 Python 多 Agent 框架"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "SherryAgent Team" }
]
keywords = ["ai", "agent", "llm", "claude", "openai"]

dependencies = [
    "click>=8.1",
]

[project.scripts]
sherry-agent = "sherry_agent.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "contract: contract-level schema and interface checks",
    "governance: governance and policy checks",
    "story01: Story-01 acceptance and runtime coverage",
    "story02: Story-02 acceptance and runtime coverage",
    "story03: Story-03 acceptance and runtime coverage",
    "story04: Story-04 acceptance and runtime coverage",
    "story05: Story-05 acceptance and runtime coverage",
    "runtime: runtime planning/execution coverage",
    "policy: policy gate coverage",
    "persistence: task service and persistence coverage",
    "memory: memory and retrieval coverage",
    "cost: cost and capacity coverage",
    "metrics: measurable harness helper checks",
    "decision_replay: tests that exercise evidence/decision replay assertions",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
